Align Panama example with book and document